force-app/main/default/objects/Support_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Fix</fullName>
                <label>PROD Data Change</label>
            </value>
            <value>
                <fullName>Config Change Deploy</fullName>
            </value>
            <value>
                <fullName>Quick Fix</fullName>
                <label>Gearset Deploy</label>
            </value>
            <value>
                <fullName>Training - New</fullName>
            </value>
            <value>
                <fullName>Training Issue</fullName>
                <label>Training - Refresher</label>
            </value>
            <value>
                <fullName>Training - Global Impact</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>Sub-Project</fullName>
            </value>
            <value>
                <fullName>ServiceNow Request</fullName>
            </value>
            <value>
                <fullName>Salesforce for Outlook</fullName>
            </value>
            <value>
                <fullName>Salesforce Issue</fullName>
            </value>
            <value>
                <fullName>Support Request Enhancement</fullName>
            </value>
            <value>
                <fullName>Account Request</fullName>
                <isActive>false</isActive>
                <label>Account Request</label>
            </value>
            <value>
                <fullName>Change Request</fullName>
                <isActive>false</isActive>
                <label>Change Request</label>
            </value>
            <value>
                <fullName>Deployment</fullName>
                <isActive>false</isActive>
                <label>Deployment</label>
            </value>
            <value>
                <fullName>Project</fullName>
                <isActive>false</isActive>
                <label>Project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>