force-app/main/default/objects/Support_Request__c/fields/User_Account_Request_For__c.field-meta.xml
<CustomField>
    <fullName>User_Account_Request_For__c</fullName>
    <label>User Account Request For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>