force-app/main/default/objects/Support_Request__c/recordTypes/Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Change_Request</fullName>
    <active>true</active>
    <label>Change Request</label>
</RecordType>