force-app/main/default/objects/Support_Request__c/recordTypes/Sub_Project.recordType-meta.xml
<RecordType>
    <fullName>Sub_Project</fullName>
    <active>true</active>
    <label>Sub-Project</label>
</RecordType>