force-app/main/default/objects/Support_Request__c/recordTypes/Support_Request.recordType-meta.xml
<RecordType>
    <fullName>Support_Request</fullName>
    <active>true</active>
    <label>Support Request</label>
</RecordType>