force-app/main/default/objects/Support_Request__c/recordTypes/User_Account_Request.recordType-meta.xml
<RecordType>
    <fullName>User_Account_Request</fullName>
    <active>true</active>
    <label>User Account Request</label>
</RecordType>