force-app/main/default/objects/Support_Request__c/validationRules/Assigned_To_Cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_To_Cannot_be_blank</fullName>
    <active>true</active>
    <description>The validation rule prevents from adding a support request to a release without Assigned To or Type</description>
    <errorConditionFormula>ISCHANGED(Add_to_a_Release__c) &amp;&amp; ISBLANK(Assigned_To__c)</errorConditionFormula>
    <errorDisplayField>Assigned_To__c</errorDisplayField>
    <errorMessage>You must put a value into Assign To field</errorMessage>
</ValidationRule>