force-app/main/default/objects/Support_Request__c/validationRules/CalAtlas_Business_Team_Must_Select_Queue.validationRule-meta.xml
<ValidationRule>
    <fullName>CalAtlas_Business_Team_Must_Select_Queue</fullName>
    <active>true</active>
    <description>CalAtlas Business Team Must Select Queue</description>
    <errorConditionFormula>$User.CalAtlas_Business_Team_Member__c = true &amp;&amp; 
 ISPICKVAL(Select_Queue__c, &#39;&#39;)&amp;&amp;  RecordType.DeveloperName &lt;&gt; &#39;User_Account_Request&#39;</errorConditionFormula>
    <errorDisplayField>Select_Queue__c</errorDisplayField>
    <errorMessage>You must select the queue</errorMessage>
</ValidationRule>