force-app/main/default/objects/Support_Request__c/validationRules/CBT_Assigned_To_Cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CBT_Assigned_To_Cannot_be_blank</fullName>
    <active>true</active>
    <description>Field sets required for CBT before closing a support request</description>
    <errorConditionFormula>$User.CalAtlas_Business_Team_Member__c = True

&amp;&amp;

ISBLANK(Assigned_To__c) 

&amp;&amp;

ISPICKVAL(Status__c, &#39;Closed&#39;)</errorConditionFormula>
    <errorDisplayField>Assigned_To__c</errorDisplayField>
    <errorMessage>The Support Request must be assigned before closing</errorMessage>
</ValidationRule>