force-app/main/default/objects/Support_Request__c/validationRules/CBT_Type_Cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CBT_Type_Cannot_be_blank</fullName>
    <active>true</active>
    <description>Field sets required for CBT before closing a support request</description>
    <errorConditionFormula>$User.CalAtlas_Business_Team_Member__c = True

&amp;&amp;

ISPICKVAL(Type__c, &#39;&#39;) 

&amp;&amp;

ISPICKVAL(Status__c, &#39;Closed&#39;)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>You must complete the Type</errorMessage>
</ValidationRule>