force-app/main/default/objects/Support_Request__c/validationRules/Closing_Support_Request_Without_a_Releas.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Support_Request_Without_a_Releas</fullName>
    <active>true</active>
    <description>This validation rule will prevent Team to close the Support Request without adding it to a Release</description>
    <errorConditionFormula>ISBLANK(Add_to_a_Release__c) 
&amp;&amp; ISPICKVAL(Status__c, &quot;Closed&quot;) 
&amp;&amp; (RecordTypeId  &lt;&gt; &#39;012d0000001tZk3&#39;) 
&amp;&amp; !ISPICKVAL(Type__c , &quot;Training Issue&quot;)
&amp;&amp; !ISPICKVAL(Type__c , &quot;Account Request&quot;)
&amp;&amp; !ISPICKVAL(Type__c , &quot;Password Reset&quot;)
&amp;&amp; !ISPICKVAL(Type__c , &quot;ServiceNow Request&quot;)
&amp;&amp; !ISPICKVAL(Type__c , &quot;Support Request Enhancement&quot;)
&amp;&amp;  $User.CalAtlas_Business_Team_Member__c = false</errorConditionFormula>
    <errorDisplayField>Add_to_a_Release__c</errorDisplayField>
    <errorMessage>The Support Request cannot be closed without adding it to a Release</errorMessage>
</ValidationRule>