force-app/main/default/objects/Support_Request__c/validationRules/Data_Fix_must_have_Support_Request_Note.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Fix_must_have_Support_Request_Note</fullName>
    <active>true</active>
    <description>This will prevent the Support Request from Closing a Data Fix Support Request without a Note.</description>
    <errorConditionFormula>Resolution__c = &#39;&#39; 
&amp;&amp; ISPICKVAL(Status__c, &quot;Closed&quot;) 
&amp;&amp; ISPICKVAL(Type__c, &quot;Data Fix&quot;)
&amp;&amp; (RecordType.DeveloperName  &lt;&gt; &quot;User Account Request&quot;)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>You must complete the Resolution before closing</errorMessage>
</ValidationRule>