force-app/main/default/objects/Support_Request__c/validationRules/Hour_Spend_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Hour_Spend_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; ISPICKVAL(Status__c, &quot;Closed&quot;) &amp;&amp; !ISPICKVAL(Type__c, &quot;Training Issue&quot;)&amp;&amp; ISBLANK( Time_Spent__c)</errorConditionFormula>
    <errorDisplayField>Time_Spent__c</errorDisplayField>
    <errorMessage>You must complete &quot;Estimated Hours Spent&quot; before closing this SR</errorMessage>
</ValidationRule>