force-app/main/default/objects/Support_Request__c/validationRules/Linking_to_the_Wrong_Release.validationRule-meta.xml
<ValidationRule>
    <fullName>Linking_to_the_Wrong_Release</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Add_to_a_Release__r.Status__c,&#39;Released&#39;)</errorConditionFormula>
    <errorMessage>You are trying to link the Support Request to a completed Release</errorMessage>
</ValidationRule>