force-app/main/default/objects/Support_Request__c/validationRules/Mark_as_Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Mark_as_Duplicate</fullName>
    <active>true</active>
    <errorConditionFormula>Mark_as_Duplicate__c = TRUE &amp;&amp; ISBLANK(Support_Request__c)</errorConditionFormula>
    <errorDisplayField>Support_Request__c</errorDisplayField>
    <errorMessage>You must link it to the parent Support Request</errorMessage>
</ValidationRule>