force-app/main/default/objects/Support_Request__c/validationRules/Only_Tech_Support_Team_Can_Close_this_SR.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Tech_Support_Team_Can_Close_this_SR</fullName>
    <active>true</active>
    <description>Prevents Users from Closing a Support Request</description>
    <errorConditionFormula>NOT(CONTAINS($Profile.Name, &#39;System Administrator&#39;) || CONTAINS($UserRole.Name, &#39;System Administrator&#39;))
  
&amp;&amp;

ISCHANGED(Status__c)  

&amp;&amp;

$User.CalAtlas_Business_Team_Member__c = false

&amp;&amp;

!ISPICKVAL(Type__c, &#39;Added to a Project&#39;)

&amp;&amp;
NOT(ISPICKVAL(Status__c, &#39;Accepted&#39;) || ISPICKVAL(Status__c, &#39;Confirmed&#39;))</errorConditionFormula>
    <errorDisplayField>Account_Request_Type__c</errorDisplayField>
    <errorMessage>Only a System Administrator Can Change the Status to the value you selected</errorMessage>
</ValidationRule>