force-app/main/default/objects/Support_Request__c/validationRules/Reason_for_Cancellation_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Cancellation_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; ISPICKVAL(Status__c, &#39;Canceled&#39;) &amp;&amp; ISBLANK(Reason_for_Cancellation__c) &amp;&amp;  RecordType.Name != &#39;User Account Request&#39;</errorConditionFormula>
    <errorDisplayField>Reason_for_Cancellation__c</errorDisplayField>
    <errorMessage>You must complete the reason for Cancellation</errorMessage>
</ValidationRule>