force-app/main/default/objects/Support_Request__c/validationRules/Reason_for_Rejection_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Rejection_cannot_be_blank</fullName>
    <active>true</active>
    <description>This is to validate the status cannot be changed to rejected without providing the reason.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &#39;Rejected&#39;) &amp;&amp;  ISBLANK(Reason_for_Rejection__c)</errorConditionFormula>
    <errorDisplayField>Reason_for_Rejection__c</errorDisplayField>
    <errorMessage>You must provide the reason for rejecting this SR.</errorMessage>
</ValidationRule>