force-app/main/default/objects/Support_Request__c/validationRules/Status_to_Confirmed_or_In_Development.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_to_Confirmed_or_In_Development</fullName>
    <active>true</active>
    <description>This validation rule prevent from changing the status to Confirmed or In Development without completing the Type, Assigned To or Data Fix</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; (ISPICKVAL(Status__c, &quot;Confirmed&quot;)||ISPICKVAL(Status__c, &quot;In Development&quot;))

&amp;&amp; 

(ISBLANK(Assigned_To__c)|| ISPICKVAL(Type__c, &quot;&quot;))

&amp;&amp;

$Profile.Name = &quot;Systems Administrator&quot;

&amp;&amp;

 RecordType.Name &lt;&gt; &#39;User Account Request&#39;</errorConditionFormula>
    <errorMessage>When changing the status to &quot;Confirmed&quot; or &quot;In Development&quot;, the &quot;Assigned To&quot; and &quot;Type&quot; cannot be blank.</errorMessage>
</ValidationRule>