force-app/main/default/objects/Support_Request__c/validationRules/Type_Cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Cannot_be_blank</fullName>
    <active>true</active>
    <description>The validation rule prevents from adding a support request to a release without Assigned To or Type</description>
    <errorConditionFormula>ISCHANGED (Add_to_a_Release__c) &amp;&amp; ISPICKVAL(Type__c, &quot;&quot;)
&amp;&amp;  
(RecordType.DeveloperName  &lt;&gt; &quot;User Account Request&quot;)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>You must select a type</errorMessage>
</ValidationRule>