force-app/main/default/objects/Support_Request__c/listViews/All_Opened_Support_Request_bugs_defects.listView-meta.xml
<ListView>
    <fullName>All_Opened_Support_Request_bugs_defects</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Support_Request_For__c</columns>
    <columns>Additional_Information_Description__c</columns>
    <columns>Business_Area_s_Impacted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Closed,Duplicate,Added to a Release,Rejected,Confirmed,Accepted</value>
    </filters>
    <label>All Opened Support Request(bugs defects)</label>
</ListView>