force-app/main/default/objects/Support_Request__c/listViews/Canceled_SRs.listView-meta.xml
<ListView>
    <fullName>Canceled_SRs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <label>Canceled SRs</label>
    <queue>Canceled_SR</queue>
    <sharedTo>
        <role>System_Administrators</role>
    </sharedTo>
</ListView>