force-app/main/default/objects/Support_Request__c/listViews/Closed_Requests.listView-meta.xml
<ListView>
    <fullName>Closed_Requests</fullName>
    <columns>NAME</columns>
    <columns>Create_Date_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Support_Request_For__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Requests</label>
</ListView>