force-app/main/default/objects/Support_Request__c/listViews/CR_SRs_Parking_Lot_Items_Support_Request.listView-meta.xml
<ListView>
    <fullName>CR_SRs_Parking_Lot_Items_Support_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>CR/SRs - Parking Lot Items</label>
    <queue>CR_SRs_Parking_Lot_Items</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>