force-app/main/default/objects/Support_Request__c/listViews/My_Support_Requests.listView-meta.xml
<ListView>
    <fullName>My_Support_Requests</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SR_Created_By__c</field>
        <operation>equals</operation>
        <value>True</value>
    </filters>
    <label>My Requests</label>
</ListView>