force-app/main/default/objects/Support_Request__c/listViews/Open_Change_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Change_Requests</fullName>
    <columns>NAME</columns>
    <columns>Submitted_By__c</columns>
    <columns>Create_Date_Time__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Support_Request_For__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Support_Request__c.Change_Request</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Release Note Pending,Duplicate,Handled by the Vendor</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Closed,Added to a Release,Parking Lot</value>
    </filters>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
    </filters>
    <label>Open Change Requests</label>
</ListView>