force-app/main/default/objects/Support_Request__c/listViews/Open_Support_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Support_Requests</fullName>
    <columns>NAME</columns>
    <columns>Submitted_By__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Support_Request_For__c</columns>
    <columns>Status__c</columns>
    <columns>Create_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Added to a Release,Release Note Pending</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Duplicate,Handled by the Vendor</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Support_Request__c.Support_Request</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </filters>
    <label>Open Support Requests</label>
    <sharedTo>
        <role>System_Administrators</role>
    </sharedTo>
</ListView>