force-app/main/default/objects/Support_Request__c/listViews/Parking_Lot_Support_Request.listView-meta.xml
<ListView>
    <fullName>Parking_Lot_Support_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Parking Lot</label>
    <queue>Parking_Lot</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>