force-app/main/default/objects/Support_Request__c/listViews/Rejected_SRs_Support_Request.listView-meta.xml
<ListView>
    <fullName>Rejected_SRs_Support_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Rejected SRs</label>
    <queue>Rejected_SRs</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>