force-app/main/default/objects/Support_Request__c/listViews/Service_Requests_Assigned_to_me_jag.listView-meta.xml
<ListView>
    <fullName>Service_Requests_Assigned_to_me_jag</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Project__c</columns>
    <columns>Priority_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Support_Request_For__c</columns>
    <columns>Create_Date_Time__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Additional_Information_Description__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Business_Area_s_Impacted__c</columns>
    <columns>Category__c</columns>
    <columns>Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Duplicate,Closed,In User Validation</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>contains</operation>
        <value>jagruti</value>
    </filters>
    <label>Service Requests Assigned to me_jag</label>
    <sharedTo>
        <role>System_Administrators</role>
    </sharedTo>
</ListView>