force-app/main/default/objects/Support_Request__c/listViews/SR_Parking_Lot_Support_Request.listView-meta.xml
<ListView>
    <fullName>SR_Parking_Lot_Support_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>SR Parking Lot</label>
    <queue>SR_Parking_Lot</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>