force-app/main/default/objects/Support_Request__c/listViews/Unassigned_Business_Support_Request.listView-meta.xml
<ListView>
    <fullName>Unassigned_Business_Support_Request</fullName>
    <columns>NAME</columns>
    <columns>Support_Request_For__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Duplicate</value>
    </filters>
    <label>Unassigned - Business Team SRs</label>
    <queue>CalAtlas_Business_Team</queue>
</ListView>